[gd_scene load_steps=5 format=4 uid="uid://byj6on8n1wq44"]

[ext_resource type="Script" uid="uid://7330ip7yr5v3" path="res://Scenes/Microgames/MicrogameScripts/Land/land.gd" id="1_tjbf3"]
[ext_resource type="PackedScene" uid="uid://c3nqkph00um3r" path="res://Scenes/CharacterControllers/tile_map.tscn" id="1_wcf2f"]
[ext_resource type="PackedScene" uid="uid://da7md1pxkybvi" path="res://Scenes/CharacterControllers/space_character.tscn" id="2_0i5vu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0i5vu"]
size = Vector2(525, 58)

[node name="Land" type="Node"]
script = ExtResource("1_tjbf3")

[node name="TileMap" parent="." instance=ExtResource("1_wcf2f")]
tile_map_data = PackedByteArray("AAABABQAAgABAAEAAAAAABQAAgAAAAEAAAAAABMAAgAAAAAAAAABABMAAgABAAAAAAACABMAAgABAAAAAAADABMAAgABAAAAAAAEABMAAgABAAAAAAAFABMAAgABAAAAAAAGABMAAgABAAAAAAAHABMAAgABAAAAAAAIABMAAgABAAAAAAAJABMAAgABAAAAAAAKABMAAgABAAAAAAALABMAAgABAAAAAAAMABMAAgABAAAAAAANABMAAgABAAAAAAAOABMAAgABAAAAAAAPABMAAgABAAAAAAAQABMAAgABAAAAAAARABMAAgABAAAAAAASABMAAgABAAAAAAATABMAAgABAAAAAAAUABMAAgABAAAAAAAVABMAAgABAAAAAAAWABMAAgABAAAAAAAXABMAAgABAAAAAAAYABMAAgABAAAAAAAZABMAAgABAAAAAAAaABMAAgABAAAAAAAbABMAAgABAAAAAAAcABMAAgABAAAAAAAdABMAAgABAAAAAAAeABMAAgABAAAAAAAfABMAAgABAAAAAAAgABMAAgABAAAAAAAhABMAAgABAAAAAAAiABMAAgABAAAAAAAjABMAAgABAAAAAAAkABMAAgABAAAAAAAlABMAAgABAAAAAAAmABMAAgABAAAAAAAnABMAAgACAAAAAAAnABQAAgACAAEAAAAnABUAAgACAAEAAAAnABYAAgACAAEAAAAAABUAAgAAAAEAAAAAABYAAgAAAAEAAAABABcAAgABAAIAAAACABcAAgABAAIAAAADABcAAgABAAIAAAAEABcAAgABAAIAAAAFABcAAgABAAIAAAAGABcAAgABAAIAAAAHABcAAgABAAIAAAAIABcAAgABAAIAAAAJABcAAgABAAIAAAAKABcAAgABAAIAAAALABcAAgABAAIAAAAMABcAAgABAAIAAAANABcAAgABAAIAAAAOABcAAgABAAIAAAAPABcAAgABAAIAAAAQABcAAgABAAIAAAARABcAAgABAAIAAAASABcAAgABAAIAAAATABcAAgABAAIAAAAUABcAAgABAAIAAAAVABcAAgABAAIAAAAWABcAAgABAAIAAAAXABcAAgABAAIAAAAYABcAAgABAAIAAAAZABcAAgABAAIAAAAaABcAAgABAAIAAAAbABcAAgABAAIAAAAcABcAAgABAAIAAAAdABcAAgABAAIAAAAeABcAAgABAAIAAAAfABcAAgABAAIAAAAgABcAAgABAAIAAAAhABcAAgABAAIAAAAiABcAAgABAAIAAAAjABcAAgABAAIAAAAkABcAAgABAAIAAAAlABcAAgABAAIAAAAmABcAAgABAAIAAAAAABcAAgAAAAIAAAAnABcAAgACAAIAAAAJABUAAgABAAEAAAAJABQAAgABAAEAAAAIABQAAgABAAEAAAAHABQAAgABAAEAAAAGABQAAgABAAEAAAAFABQAAgABAAEAAAAEABQAAgABAAEAAAADABQAAgABAAEAAAACABQAAgABAAEAAAACABUAAgABAAEAAAABABUAAgABAAEAAAABABYAAgABAAEAAAACABYAAgABAAEAAAADABYAAgABAAEAAAADABUAAgABAAEAAAAEABUAAgABAAEAAAAEABYAAgABAAEAAAAFABYAAgABAAEAAAAFABUAAgABAAEAAAAGABUAAgABAAEAAAAGABYAAgABAAEAAAAHABYAAgABAAEAAAAHABUAAgABAAEAAAAIABUAAgABAAEAAAAIABYAAgABAAEAAAAJABYAAgABAAEAAAAKABYAAgABAAEAAAAKABUAAgABAAEAAAAKABQAAgABAAEAAAALABQAAgABAAEAAAALABUAAgABAAEAAAALABYAAgABAAEAAAAMABYAAgABAAEAAAAMABUAAgABAAEAAAAMABQAAgABAAEAAAANABQAAgABAAEAAAANABUAAgABAAEAAAANABYAAgABAAEAAAAOABYAAgABAAEAAAAOABUAAgABAAEAAAAOABQAAgABAAEAAAAPABQAAgABAAEAAAAPABUAAgABAAEAAAAPABYAAgABAAEAAAAQABYAAgABAAEAAAAQABUAAgABAAEAAAAQABQAAgABAAEAAAARABQAAgABAAEAAAARABUAAgABAAEAAAARABYAAgABAAEAAAASABYAAgABAAEAAAASABUAAgABAAEAAAASABQAAgABAAEAAAATABQAAgABAAEAAAATABUAAgABAAEAAAATABYAAgABAAEAAAAUABYAAgABAAEAAAAUABUAAgABAAEAAAAUABQAAgABAAEAAAAVABQAAgABAAEAAAAVABUAAgABAAEAAAAVABYAAgABAAEAAAAWABYAAgABAAEAAAAWABUAAgABAAEAAAAWABQAAgABAAEAAAAXABQAAgABAAEAAAAXABUAAgABAAEAAAAXABYAAgABAAEAAAAYABYAAgABAAEAAAAYABUAAgABAAEAAAAYABQAAgABAAEAAAAZABQAAgABAAEAAAAZABUAAgABAAEAAAAZABYAAgABAAEAAAAaABYAAgABAAEAAAAaABUAAgABAAEAAAAaABQAAgABAAEAAAAbABQAAgABAAEAAAAbABUAAgABAAEAAAAbABYAAgABAAEAAAAcABYAAgABAAEAAAAcABUAAgABAAEAAAAcABQAAgABAAEAAAAdABQAAgABAAEAAAAdABUAAgABAAEAAAAdABYAAgABAAEAAAAeABYAAgABAAEAAAAeABUAAgABAAEAAAAeABQAAgABAAEAAAAfABQAAgABAAEAAAAfABUAAgABAAEAAAAfABYAAgABAAEAAAAgABYAAgABAAEAAAAgABUAAgABAAEAAAAgABQAAgABAAEAAAAhABQAAgABAAEAAAAhABUAAgABAAEAAAAhABYAAgABAAEAAAAiABYAAgABAAEAAAAiABUAAgABAAEAAAAiABQAAgABAAEAAAAjABQAAgABAAEAAAAjABUAAgABAAEAAAAjABYAAgABAAEAAAAkABYAAgABAAEAAAAkABUAAgABAAEAAAAkABQAAgABAAEAAAAlABQAAgABAAEAAAAlABUAAgABAAEAAAAlABYAAgABAAEAAAAmABYAAgABAAEAAAAmABUAAgABAAEAAAAmABQAAgABAAEAAAD//xcAAgABAAEAAAD//xYAAgABAAEAAAD//xUAAgABAAEAAAD//xQAAgABAAEAAAD//xMAAgABAAEAAAD//xIAAgABAAEAAAD//xEAAgABAAEAAAD//xAAAgABAAEAAAD//w8AAgABAAEAAAD//w4AAgABAAEAAAD//w0AAgABAAEAAAD//wwAAgABAAEAAAD//wsAAgABAAEAAAD//woAAgABAAEAAAD//wkAAgABAAEAAAD//wgAAgABAAEAAAD//wcAAgABAAEAAAD//wYAAgABAAEAAAD//wUAAgABAAEAAAD//wQAAgABAAEAAAD//wMAAgABAAEAAAD//wIAAgABAAEAAAD//wEAAgABAAEAAAD//wAAAgABAAEAAAD/////AgABAAEAAAAAAP//AgABAAEAAAABAP//AgABAAEAAAACAP//AgABAAEAAAADAP//AgABAAEAAAAEAP//AgABAAEAAAAFAP//AgABAAEAAAAGAP//AgABAAEAAAAHAP//AgABAAEAAAAIAP//AgABAAEAAAAJAP//AgABAAEAAAAKAP//AgABAAEAAAALAP//AgABAAEAAAAMAP//AgABAAEAAAANAP//AgABAAEAAAAOAP//AgABAAEAAAAPAP//AgABAAEAAAAQAP//AgABAAEAAAARAP//AgABAAEAAAASAP//AgABAAEAAAATAP//AgABAAEAAAAUAP//AgABAAEAAAAVAP//AgABAAEAAAAWAP//AgABAAEAAAAXAP//AgABAAEAAAAYAP//AgABAAEAAAAZAP//AgABAAEAAAAaAP//AgABAAEAAAAbAP//AgABAAEAAAAcAP//AgABAAEAAAAdAP//AgABAAEAAAAeAP//AgABAAEAAAAfAP//AgABAAEAAAAgAP//AgABAAEAAAAhAP//AgABAAEAAAAiAP//AgABAAEAAAAjAP//AgABAAEAAAAkAP//AgABAAEAAAAlAP//AgABAAEAAAAmAP//AgABAAEAAAAnAP//AgABAAEAAAAoAP//AgABAAEAAAAoAAAAAgABAAEAAAAoAAEAAgABAAEAAAAoAAIAAgABAAEAAAAoAAMAAgABAAEAAAAoAAQAAgABAAEAAAAoAAUAAgABAAEAAAAoAAYAAgABAAEAAAAoAAcAAgABAAEAAAAoAAgAAgABAAEAAAAoAAkAAgABAAEAAAAoAAoAAgABAAEAAAAoAAsAAgABAAEAAAAoAAwAAgABAAEAAAAoAA0AAgABAAEAAAAoAA4AAgABAAEAAAAoAA8AAgABAAEAAAAoABAAAgABAAEAAAAoABEAAgABAAEAAAAoABIAAgABAAEAAAAoABMAAgABAAEAAAAoABQAAgABAAEAAAAoABUAAgABAAEAAAAoABYAAgABAAEAAAAoABcAAgABAAEAAAAOABEAAgAAAAAAAAAYABEAAgACAAAAAAAPABEAAgABAAAAAAAQABEAAgABAAAAAAARABEAAgABAAAAAAASABEAAgABAAAAAAATABEAAgABAAAAAAAUABEAAgABAAAAAAAVABEAAgABAAAAAAAWABEAAgABAAAAAAAXABEAAgABAAAAAAAYABIAAgACAAEAAAAOABIAAgAAAAEAAAAPABIAAgABAAEAAAAQABIAAgABAAEAAAARABIAAgABAAEAAAASABIAAgABAAEAAAATABIAAgABAAEAAAAUABIAAgABAAEAAAAVABIAAgABAAEAAAAWABIAAgABAAEAAAAXABIAAgABAAEAAAA=")

[node name="SpaceCharacter" parent="." instance=ExtResource("2_0i5vu")]
position = Vector2(940.00006, 78)

[node name="LandZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LandZone"]
position = Vector2(936, 788)
shape = SubResource("RectangleShape2D_0i5vu")

[node name="StartTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="landed" from="SpaceCharacter" to="." method="_on_space_character_landed"]
[connection signal="body_entered" from="LandZone" to="." method="_on_land_zone_body_entered"]
[connection signal="body_exited" from="LandZone" to="." method="_on_land_zone_body_exited"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
